devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cakesnbakes
  labels:
    project: cakesnbakes
