devops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnb-ingress
  namespace: cakesnbakes
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  ingressClassName: nginx
  rules:
    - host: cakes.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cnb-backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cnb-frontend
                port:
                  number: 80
